changed the background color of removebtn, on activate red

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
 
     <div class="main-cont">
-        <div class="ticket-cont">
+        <!-- <div class="ticket-cont">
             <div class="ticket-color">blue</div>
             <div class="ticket-id">123</div>
             <div class="task-area" contenteditable>random 1st task</div>
@@ -33,7 +33,7 @@
                 <i class="fa-solid fa-lock"></i>
             </div>
 
-        </div>
+        </div> -->
     </div>
 
     <!-- popup / modal  -->
